--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,10 @@
 <div id='header'>
-	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam eius nobis consequatur corrupti in eveniet optio magnam. Modi atque nihil repudiandae, rerum doloremque beatae magnam sapiente, reiciendis reprehenderit sed minima? </p>
-
+	<a href="https://github.com/ng2-ui/ng2-map">
+	<div class="logo">
+		<img src="../../assets/GitHub-Mark-64px.png">
+		<h2>
+			Check Out the Repo
+		</h2>
+	</div>
+	</a>
 </div>
