--- a/src/app/simple-marker/simple-marker.component.html
+++ b/src/app/simple-marker/simple-marker.component.html
@@ -3,10 +3,11 @@
     (click)="log($event)"
     [scrollwheel]="false">
     <marker position="will-fall-back-to-brampton-canada"
-      [geoFallbackPosition]="[43.73154789999999, -79.7449296972229]"
+      [geoFallbackPosition]="[ 43.731299, -79.762407]"
       (dragstart)="log($event, 'dragstart')"
       (dragend)="log($event, 'dragend')"
-      draggable="true"></marker>
+      draggable="true">
+    </marker>
 </ng2-map>
 
 
@@ -17,7 +18,7 @@
     		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(click)="log($event)"<br />
     		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[scrollwheel]="false"&gt;<br />
     		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;marker position="will-fall-back-to-brampton-canada"<br />
-      		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[geoFallbackPosition]="[43.73154789999999, -79.7449296972229]"<br />
+      		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[geoFallbackPosition]="[ 43.731299, -79.762407]"<br />
       		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(dragstart)="log($event, 'dragstart')"<br />
       		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(dragend)="log($event, 'dragend')"<br />
       		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;draggable="true"&gt;&lt;/marker&gt;<br />
